--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include "spring-webmvc"
 include "spring-webflux"
 include "spring-websocket"
 include "spring-framework-bom"
+include "spring-debug"
 
 // Exposes gradle buildSrc for IDE support
 include "buildSrc"
